# SONIFICATION

./: .gitignore  .zenodo.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REVIEW_NOTES.md  package.json  pyproject.toml  qec_repo.json
.github/workflows/: tests.yml
APP/: README.md  index.html  styles.css
APP/js/: app.js  audio.js  composition.js  math64.js  namespace.js  provenance.js  sha256.js  synthesis.js  visualization.js
APP/tests/: browser-runner.js  dom-smoke.cjs  index.html  run.cjs  tests.css  tests.js
docs/: CLAIM_BOUNDARIES.md  DETERMINISM.md  ETQ_V2_TO_V3_MIGRATION.md  ETQ_V3_0_1_RELEASE_NOTES.md  ETQ_V3_CLAIM_BOUNDARIES.md  ETQ_V3_EVENT_PROTOCOL.md  GRAPH_SURROGATE_TESTBENCH.md  MATHEMATICAL_MODEL.md  RIGHTS_AND_ARCHIVING.md  ROADMAP.md  SCIENTIFIC_BOUNDARIES.md  SONIFICATION_MAPPING.md  TANNER_TUNING_FORK.md
docs/etq-303/: README.md
examples/: etq-101.canonical.json  etq-101.v2.canonical.json  etq-303.v3.canonical.json  generate_basic_loop.py
scripts/: build-etq303-paper.sh  build-v3-artifacts.mjs  update-v3-fixtures.mjs  verify-legacy.mjs  verify-v3.mjs  verify.mjs
sonification/: README.md  __init__.py  __main__.py  cli.py  composition.py  config.py  renderer.py
sonification/core/: __init__.py  audio.py  provenance.py  tuning.py
spec/: etq-101.schema.json  etq-101.v2.schema.json  etq-303.v3.schema.json
src/: etq-model.mjs  etq-v3-artifacts.mjs  etq-v3-canonical.mjs  etq-v3-core.mjs  etq-v3-receivers.mjs  etq101-tuning-fork.mjs  tanner-tuning-fork.mjs
tests/: conftest.py  etq-model.test.mjs  etq-v3.test.mjs  tanner-tuning-fork.test.mjs  test_audio.py  test_cli.py  test_config.py  test_prng_and_sources.py  test_provenance.py  test_renderer.py  test_synthesis.py
(+19 files in other folders)
