[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "qsol-sonification"
version = "0.1.0"
description = "Deterministic, sample-free mathematical loop generation for music creation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Trent Slade / QSOL-IMC" },
]
keywords = [
  "sonification",
  "procedural-audio",
  "deterministic-audio",
  "mathematical-music",
  "physical-modeling",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]
lab = [
  "gradio>=5,<7",
  "matplotlib>=3.8,<4",
  "plotly>=5,<7",
  "scipy>=1.12,<2",
  "sounddevice>=0.5,<1",
  "soundfile>=0.13,<1",
]
accelerate = [
  "numba>=0.61,<1",
]

[project.scripts]
sonification = "sonification.cli:main"

[tool.setuptools.packages.find]
include = ["sonification*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.coverage.run]
branch = true
source = ["sonification"]

[tool.coverage.report]
show_missing = true
skip_covered = true
